--- a/strava-hound/src/app/components/home/home.component.css
+++ b/strava-hound/src/app/components/home/home.component.css
@@ -1,3 +1,20 @@
-button {
-  margin: 25px;
+.home-bg {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.home-card {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255 255 255 / 40%);
+}
+
+.strava-btn {
+  background-color: #fc5200;
+  color: white;
 }
